# linguistic-knowledge-tree

./: .gitignore  CLAUDE.md  README.md
backend/: README.md
backend/ai/: pyproject.toml
backend/ai/klg_ai/: __init__.py  activation.py  events.py  evidence.py  forgetting.py  gaps.py  graph.py  kgt.py  loader.py  profiles.py  propagation.py  status.py
backend/ai/klg_ai/adapters/: __init__.py  slam.py  slam_mapping.py  synthetic.py
backend/ai/klg_ai/core/: __init__.py  activation.py  evidence.py  gaps.py  graph.py  loader.py  propagation.py  status.py
backend/ai/klg_ai/data/: __init__.py  dataset.py  profiles.py  sources.py
backend/ai/klg_ai/data/adapters/: __init__.py  slam.py  slam_mapping.py  synthetic.py
backend/ai/klg_ai/eval/: __init__.py  ablations.py  baselines.py  dataset.py  ielts.py  ielts_graded.py  ielts_tagged.py  mapping_eval.py  mapping_run.py  metrics.py  predict.py  retrain.py  retrain_predictor.py  run.py  train_prop_predictor.py
backend/ai/klg_ai/semantic/: __init__.py  build_vectors.py  embedder.py  mapper.py  node_vectors.py
backend/ai/klg_ai/tuning/: __init__.py  kgt.py  retrain.py  train_prop.py
backend/ai/tests/: test_activation.py  test_eval.py  test_evidence.py  test_forgetting.py  test_kgt.py  test_mapping_eval.py  test_profiles.py  test_propagation.py  test_semantic_mapper.py  test_semantic_vectors.py  test_slam_adapter.py  test_status.py  test_train_prop.py
backend/ai/tests/fixtures/slam/: mini.slam.20190204.dev  mini.slam.20190204.dev.key  mini.slam.20190204.train
backend/server/: pyproject.toml
backend/server/klg_server/: deps.py  gemini.py  main.py  trace.py
backend/server/klg_server/routers/: chat.py  learner.py  map.py  metrics.py  profiles.py  status.py
backend/server/klg_server/schemas/: __init__.py  requests.py  responses.py
backend/server/tests/: test_api.py  test_chat.py  test_profiles_api.py
data/ielts/raw/: test_01.md  test_02.md  test_03.md  test_04.md  test_05.md  test_06.md  test_07.md  test_08.md  test_09.md  test_10.md  test_11.md
docs/: knowledge-state-api.md  phase5-validation.md  phase6-validation.md  phase7-validation.md  roadmap.md  subturtle-review-event-log-spec.md  trained-propagation-validation.md
docs/ielts-case-study/: results.json
docs/phase5/: results.json
docs/phase6/: journey.mmd  mapping_results.json  node_vectors.meta.json  node_vectors.npz  results_kbert.json
docs/phase7/: results.json
docs/trained-prop/: results.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  constants.ts  style.css
frontend/src/components/: ChatPanel.vue  ControlsPanel.vue  GraphCanvas.vue  MetricsDashboard.vue  NodeDetails.vue  ProfilesPage.vue  RetrainPanel.vue  StatusBar.vue
frontend/src/composables/: useCytoscape.ts
frontend/src/services/: api.ts
frontend/src/stores/: chat.ts  learner.ts  map.ts  metrics.ts  retrain.ts  timeline.ts  view.ts
map/: README.md  english-syntax-map.v0.json  validate.py
paper-work/: Course Work Paper 1.md
(+1 files in other folders)
