[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "klg-ai"
version = "0.1.0"
description = "Linguistic Knowledge Graph — AI engine (map, activation, status, gaps)"
requires-python = ">=3.10"
dependencies = ["networkx>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["klg_ai*"]
