[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "klg-ai"
version = "0.1.0"
description = "Linguistic Knowledge Graph — AI engine (map, activation, status, gaps)"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "torch>=2.2",            # GNN propagation (lazy-imported in propagation.py)
    "torch-geometric>=2.5",  # MessagePassing layer
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Local BERT mapper for Phase 6 / RQ2 (semantic evidence->node mapping). Heavy
# (transformers+torch) and lazy-imported in semantic/embedder.py; absent -> the
# deterministic HashingEmbedder fallback, so the core engine + tests never need it.
semantic = ["sentence-transformers>=2.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["klg_ai*"]
