[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "klg-server"
version = "0.1.0"
description = "Linguistic Knowledge Graph — FastAPI server app (depends on klg-ai)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",          # Gemini REST call in gemini.py (lazy-imported)
    "klg-ai",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["klg_server*"]
